feat: add groups and invitations API
